--- a/package.json
+++ b/package.json
@@ -14,20 +14,16 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
-    "bootstrap": "^5.3.3",
     "eslint-plugin-no-secrets": "^0.8.9",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-unicorn": "^52.0.0",
     "jsonc-eslint-parser": "^2.4.0",
     "next": "14.2.1",
     "react": "^18",
-    "react-carousel-minimal": "^1.4.1",
     "react-dom": "^18",
     "react-material-ui-carousel": "^3.4.2",
-    "react-multi-carousel": "^2.8.5",
     "react-responsive-carousel": "^3.2.23",
-    "styled-components": "^6.1.8",
-    "swiper": "^11.1.1"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/node": "^20",
