--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-carousel-minimal": "^1.4.1",
     "react-dom": "^18",
     "react-material-ui-carousel": "^3.4.2",
+    "react-multi-carousel": "^2.8.5",
     "react-responsive-carousel": "^3.2.23",
     "styled-components": "^6.1.8"
   },
