--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.1",
     "typescript": "^5"
