--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "react-dom": "^18",
     "react-material-ui-carousel": "^3.4.2",
     "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.30.2",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.1",
     "typescript": "^5"
