--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18",
     "react-material-ui-carousel": "^3.4.2",
     "react-responsive-carousel": "^3.2.23",
+    "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.8",
     "yup": "^1.4.0"
