--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-date-pickers": "^7.2.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
     "cloudinary": "^2.0.3",
     "dayjs": "^1.11.10",
     "eslint-plugin-no-secrets": "^0.8.9",
