--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-material-ui-carousel": "^3.4.2",
+    "react-number-format": "^5.3.4",
     "react-responsive-carousel": "^3.2.23",
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
