--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-unicorn": "^52.0.0",
     "formik": "^2.4.5",
     "jsonc-eslint-parser": "^2.4.0",
+    "mui-image": "^1.0.7",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
