--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,8 @@
         "name": "next"
       }
     ],
-    "baseUrl": "src",
     "paths": {
-      "@/components/*": ["components/*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
