--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-date-pickers": "^7.2.0",
+    "@react-oauth/google": "^0.12.1",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "cloudinary": "^2.0.3",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.4.5",
     "eslint-plugin-no-secrets": "^0.8.9",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-unicorn": "^52.0.0",
