--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.8",
     "yup": "^1.4.0"
   },
