--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
+    "eslint": "^8.57.0",
     "typescript": "^5"
   }
 }
