--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,10 @@
   "parser": "@typescript-eslint/parser",
   "overrides": [
     {
-      "files": ["*.jsx", "*.tsx"] // for JSX component
+      "files": ["*.jsx", "*.tsx"], // for JSX component
+      "rules": {
+        "unicorn/prefer-module": "off"
+      }
     },
     {
       "files": [
