--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-number-format": "^5.3.4",
     "react-responsive-carousel": "^3.2.23",
     "react-scroll": "^1.9.0",
+    "react-timer-hook": "^3.0.7",
     "react-toastify": "^10.0.5",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.8",
